# crwumb

./: .bazelproject  .gitignore  BUILD.bazel  Dockerfile  MODULE.bazel  Makefile  README.md  WORKSPACE  version_base.bzl
docs/: toasty-software-guide-to-bazel.md
example/: calculator.uwu  hello.uwu
include/: platform.h  token.h
kernel/: Makefile  boot.asm  entry.asm  idt.asm  idt.c  idt.h  irq.c  isr.asm  isr.c  kernel.c  keyboard.asm  keyboard.c  linker.ld  network.c  network.h  rtl8139.c  types.h
project/: README.md
src/: codegen.c  jit_engine.c  main.c  semantic.c
stdlib/: BUILD.bazel  uwu.c  uwu.h
test/: README.md
utils/: README.md
