cc_library(
    name = "uwu_stdlib_lib",
    srcs = ["uwu_stdlib.c"],
    hdrs = ["uwu_stdlib.h"],
    copts = ["-O2"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "uwu_stdlib_obj",
    srcs = ["uwu_stdlib.c"],
    outs = ["uwu_stdlib.o"],
    cmd = "gcc -c -O2 $< -o $@",
    visibility = ["//visibility:public"],
)
